tests/baselines/reference/multipleStringIndexers.errors.txt
multipleStringIndexers.ts(4,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(5,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(9,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(10,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(14,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(15,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(19,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(20,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(24,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(25,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(29,5): error TS2374: Duplicate index signature for type 'string'.
multipleStringIndexers.ts(30,5): error TS2374: Duplicate index signature for type 'string'.


==== multipleStringIndexers.ts (12 errors) ====
    // Multiple indexers of the same type are an error
    
    class C {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    interface I {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    var a: {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    var b: {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    } = { y: '' }
    
    class C2<T> {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }
    
    interface I2<T> {
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
        [x: string]: string;
        ~~~~~~~~~~~~~~~~~~~~
!!! error TS2374: Duplicate index signature for type 'string'.
    }